force-app/main/default/objects/EmailAddress__c/EmailAddress__c.object-meta.xml
<CustomObject>
    <description>Email address to send trip report to.</description>
    <label>Email Address</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>