force-app/main/default/objects/EmailAddress__c/fields/distributionGroup__c.field-meta.xml
<CustomField>
    <fullName>distributionGroup__c</fullName>
    <description>Master distribution group</description>
    <inlineHelpText>Master distribution group</inlineHelpText>
    <label>Distribution Group</label>
    <referenceTo>DistributionGroup__c</referenceTo>
    <relationshipLabel>Email Addresses</relationshipLabel>
    <relationshipName>Email_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>