force-app/main/default/objects/EmailAddress__c/fields/emailAddress__c.field-meta.xml
<CustomField>
    <fullName>emailAddress__c</fullName>
    <description>Email address</description>
    <inlineHelpText>Email address</inlineHelpText>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>